test/libsolidity/syntaxTests/types/function_call_fail.sol
contract C {
    function f(uint y) public pure {
        (4(y)) = 2;
    }
}
// ----
// TypeError 5704: (59-63): This expression is not callable.
